// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<XUIAutoCompleterSecondarySearch /> should render a placeholder inside the input when passed in 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render an automation id when a qahook is passed 1`] = `
<div
  className=""
  data-automationid="secondary-search--container"
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render an id on the dropdown node when passed in the id prop 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render an id on the input when a value is passed to the inputId prop 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render as disabled when isDisabled prop is true 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render extra classes to the dropdown when passed to the dropdownClassName prop 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render extra classes to the input when passed to the inputclassName prop 1`] = `
<div
  className=""
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;

exports[`<XUIAutoCompleterSecondarySearch /> should render extra classes when passed to the className prop 1`] = `
<div
  className="secondary-search-class"
  data-automationid={null}
>
  <div
    className="xui-dropdown-fullwidth xui-dropdown--toggledwrapper"
    data-ref="toggled-wrapper"
  >
    <button
      aria-haspopup="listbox"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      type="button"
    >
      trigger
    </button>
  </div>
</div>
`;
